<resources>
    <string name="app_name">Word Remember</string>

    <!--  Learn Word  -->
    <string name="learn_word_fragment_title">Learn</string>
    <string name="learn_word_question_translate">Translate this word:</string>

    <!--  Add Words  -->
    <string name="add_word_fragment_title">Add</string>
    <string name="add_word_hint_new_word">New word</string>
    <string name="add_word_hint_new_word_gender">Gender</string>
    <string name="add_word_hint_word_plural_form">Plural form</string>
    <string name="add_word_hint_translation">Translation</string>
    <string name="add_word_this_word_only_plural">This word has only plural form</string>
    <string name="add_word_required">* Required</string>
    <string name="add_word_not_required" translatable="false" />
    <string name="add_word_word_type_hint">This word is:</string>
    <string name="add_word_word_type_noun">Noun</string>
    <string name="add_word_word_type_verb">Verb</string>
    <string name="add_word_word_type_adjective">Adjective</string>
    <string name="add_word_time_prasens" translatable="false">Präsens</string>
    <string name="add_word_time_prateritum" translatable="false">Präteritum</string>
    <string name="add_word_time_perfect" translatable="false">Perfect</string>
    <string name="add_word_button_save">Save</string>
    <string name="add_word_person_ich" translatable="false">Ich</string>
    <string name="add_word_person_wir" translatable="false">Wir</string>
    <string name="add_word_person_du" translatable="false">Du</string>
    <string name="add_word_person_ihr" translatable="false">Ihr</string>
    <string name="add_word_person_er_sie_es" translatable="false">man</string>
    <string name="add_word_person_sie_sie" translatable="false">Sie</string>
    <string name="add_word_person_perfect" translatable="false">Perfect</string>
    <string name="add_word_plural_prefix" translatable="false">die ⁠</string>
    <string name="add_word_generated_content_consider_check">Generated content. Consider checking</string>
    <string name="add_word_komparativ" translatable="false">Komparativ</string>
    <string name="add_word_superlativ" translatable="false">Superlativ</string>
    <string name="add_word_superlativ_prefix" translatable="false">am ⁠</string>
    <string name="add_word_sein_haben_prefix" translatable="false">sein/haben ⁠</string>

    <!--  Words List  -->
    <string name="words_list">Words list</string>
    <string name="words_list_subtitle_prateritum" translatable="false">Präteritum</string>
    <string name="words_list_subtitle_perfect" translatable="false">Perfect</string>
    <string name="words_list_subtitle_komparativ" translatable="false">Komparativ</string>
    <string name="words_list_subtitle_superlativ" translatable="false">Superlativ</string>
    <string name="words_list_superlativ_prefix" translatable="false">am %1$s</string>
    <string name="words_list_snackbar_word_is_deleted">Word is deleted</string>
    <string name="words_list_snackbar_undo">Undo</string>
    <string name="words_list_search_hint">Search word</string>
    <string name="words_list_menu_search">Search</string>
    <string name="words_list_menu_sort">Sort</string>
    <string name="words_list_menu_alphabetical_order" translatable="false">A-z</string>
    <string name="words_list_menu_word_type_or_gender">Word type/gender</string>
    <string name="words_list_menu_reverse">Reverse</string>

    <!-- App Info -->
    <string name="app_info">App Info</string>
    <string name="info_version">Version</string>
    <string name="info_source_code">Source code</string>
    <string name="info_tap_to_open_github_page">Tap to open Github page</string>
    <string name="info_rate_this_app">Rate this app</string>
    <string name="info_tap_to_open_play_market">Tap to open Play Market</string>
    <string name="info_author">Author</string>
    <string name="info_author_name">Savva Mirzoyan</string>
    <string name="info_author_bio">Android developer &amp; guitar player</string>
    <string name="info_website">Website</string>
    <string name="info_tap_to_open_profile">Tap to open Savva\'s profile page</string>
    <string name="info_contact_me">Contact me</string>
    <string name="info_tap_to_open_telegram">Tap to open Telegram</string>

    <!--  Input Errors  -->
    <string name="input_error_no_gender">Word must have gender</string>
    <string name="input_error_word_must_not_be_empty">Word must not be empty or blank</string>
    <string name="input_error_word_must_have_plural">Word must have plural form</string>
    <string name="input_error_word_must_have_translation">Word must have translation</string>

    <!--  Output error  -->
    <string name="output_error_not_enough_words">Not enough words to start 😿</string>

    <!-- Content Description -->
    <string name="content_description_translates_to">Translates to</string>
    <string name="content_description_icon">Icon</string>

    <!-- DEBUG -->
    <string name="debug_add_random_words" translatable="false">Add random words</string>
    <string name="debug_delete_all_words" translatable="false">Delete all words</string>
    <string name="gender_plural" translatable="false">die</string>
</resources>