<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/learnWordAddWordViewPagerFragment">
    <fragment
        android:id="@+id/learnWordAddWordViewPagerFragment"
        android:name="xyz.savvamirzoyan.wordremember.presentation.view.fragment.LearnWordAddWordViewPagerFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_learn_word_add_word_view_pager">
        <action
            android:id="@+id/toWordsListFragment"
            app:destination="@id/wordsListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/toAppInfo"
            app:destination="@id/infoFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/wordsListFragment"
        android:name="xyz.savvamirzoyan.wordremember.presentation.view.fragment.WordsListFragment"
        android:label="@string/words_list"
        tools:layout="@layout/fragment_words_list" />
    <fragment
        android:id="@+id/infoFragment"
        android:name="xyz.savvamirzoyan.wordremember.presentation.view.fragment.InfoFragment"
        android:label="@string/app_info"
        tools:layout="@layout/fragment_info" />
</navigation>